; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/libncftp/extr_io.c_FTPPutOneFile2.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/libncftp/extr_io.c_FTPPutOneFile2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kResumeNo = common dso_local global i32 0, align 4
@kDeleteNo = common dso_local global i32 0, align 4
@NoConfirmResumeUploadProc = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FTPPutOneFile2(i32 %0, i8* %1, i8* %2, i32 %3, i32 %4, i32 %5, i8* %6, i8* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  store i32 %0, i32* %9, align 4
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i8* %6, i8** %15, align 8
  store i8* %7, i8** %16, align 8
  %17 = load i32, i32* %9, align 4
  %18 = load i8*, i8** %10, align 8
  %19 = load i8*, i8** %11, align 8
  %20 = load i32, i32* %12, align 4
  %21 = load i32, i32* %13, align 4
  %22 = load i32, i32* %14, align 4
  %23 = load i8*, i8** %15, align 8
  %24 = load i8*, i8** %16, align 8
  %25 = load i32, i32* @kResumeNo, align 4
  %26 = load i32, i32* @kDeleteNo, align 4
  %27 = load i32, i32* @NoConfirmResumeUploadProc, align 4
  %28 = call i32 @FTPPutOneFile3(i32 %17, i8* %18, i8* %19, i32 %20, i32 %21, i32 %22, i8* %23, i8* %24, i32 %25, i32 %26, i32 %27, i32 0)
  ret i32 %28
}

declare dso_local i32 @FTPPutOneFile3(i32, i8*, i8*, i32, i32, i32, i8*, i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
